<resources>
    <string name="app_name">Test Service</string>
    <string name="title_activity_activity_main">ActivityMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>
    <string name="action_register">Register</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_home">Home</string>
    <string name="action_skip">Skip</string>

    <string name="register_full_name">Full Name</string>
    <string name="register_full_name_helper">Name is required field</string>
    <string name="register_address">Address</string>
    <string name="register_email">E-mail</string>
    <string name="register_email_helper">E-mail is required field</string>
    <string name="register_product_label">Product</string>
    <string name="register_contact">Contact number</string>
    <string name="register_product_serial">Product serial number</string>
    <string name="register_date_purchase">Date of purchase</string>

    <string name="fake_show_dialog">Show Dialog</string>
</resources>
